[package]
name = "omango-futex"
version = "0.1.1"
authors = ["Trung Tran <tqtrungse@gmail.com>"]
edition = "2021"
description = "Futex for Rust"
license = "MIT"
repository = "https://github.com/tqtrungse/omango-futex"
homepage = "https://github.com/tqtrungse/omango-futex"
documentation = "https://docs.rs/omango-futex"
keywords = ["futex", "atomic-wait"]
categories = ["no-std"]

[dependencies]
omango-util = "0.1.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_WindowsProgramming"]

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
libc = "0.2.153"